:sparkles: feat: more neetcode